--- a/homework.css
+++ b/homework.css
@@ -11,7 +11,7 @@
      width: 4px;
      height: 20px;
      top: 12px;
-     left: 24px;
+     left: 40px;
      position: absolute;
      float: left;
      margin: 0 auto;
@@ -19,10 +19,10 @@
 
  }
 #chartName{
-    width: 120px;
-    height: 22px;
+    width: 100px;
+    height: 30px;
     top: 12px;
-    left: 26px;
+    left: 40px;
     position: absolute;
     margin: 0 auto;
     float: left;
@@ -45,62 +45,82 @@
     background-color: #fff;
 }
 
-/* 表格内容选择文字 */
-#greenButton{
-    width: 30px;
-    height: 12px;
-    top: 30px;
+/* 表格内文字 */
+
+
+/* 表格内左侧内容 */
+#leftItems{
+    width: 200px;
+    height: 30px;
+    top: 20px;
+    left: 40px;
     float: left;
-    margin-left: 32px;
     position: relative;
-    background: url("../Test/greenButton.jpg") no-repeat;
+    vertical-align: middle;
+}
+#greenButton{
+    width: 40px;
+    height: 17px;
+    margin: 9px 5px;
+    vertical-align: middle;
+    background: url("../Test/greenButton.jpg") ;
 }
 #buttonText{
-    top: 26px;
-    float: left;
-    margin-left: 10px;
-    position: relative;
+    width: 100px;
+    height: 30px;
     font-family: '幼圆';
     font-weight: 500;
+    vertical-align: middle;
+}
+
+
+/* 表格内部右侧内容 */
+#rightItems{
+    width: 435px;
+    height: 30px;
+    top: 20px;
+    float: right;
+    position: relative;
+    vertical-align: middle;
 }
 #yesterday{
-    top: 24px;
-    right: 380px;
-    float: right;
-    margin: 0 auto;
+    width: 60px;
+    height: 30px;
+    margin: 0 15px;
     position: relative;
+    text-align: center;
 }
 #week{
-    top: 24px;
-    right: 300px;
-    float: right;
-    margin: 0 auto;
-    position: relative;
+    width: 60px;
+    height: 30px;
+    margin: 0 15px;
+    //position: relative;
+    text-align: center;
 }
 #month{
-    top: 24px;
-    right: 200px;
-    float: right;
-    margin: 0 auto;
-    position: relative;
+    width: 60px;
+    height: 30px;
+    margin: 0 15px;
+    //position: relative;
+    text-align: center;
 }
 #anyDays{
     width: 190px;
     height: 30px;
+    margin-right: 30px;
     float: right;
-    left: 66px;
-    top: 22px;
+    vertical-align: middle;
     background: url("../Test/anyDays1.jpg") no-repeat;
-    position: relative;
+    //position: relative;
 }
 
 /* 图表 */
 #myChart{
     width: 900px;
     height: 350px;
-    top: 38px;
-    left: 10px;
-    margin: center center;
+    top: 50px;
+    left: 12px;
+    //margin: 0 10px;
     //border: 1px solid #eff3f6;
 
 }
