--- a/css/homework.css
+++ b/css/homework.css
@@ -3,7 +3,7 @@
     height: 546px;
     position: absolute;
     background: #f9fafc;
-
+    margin: 50px 170px;
 }
 
 /* 表格说明文字 */
@@ -15,7 +15,7 @@
      position: absolute;
      float: left;
      margin: 0 auto;
-     background: url("../Test/blue.png") no-repeat;
+     background: url("../img/blue.png") no-repeat;
 
  }
 #chartName{
@@ -26,9 +26,9 @@
     position: absolute;
     margin: 0 auto;
     float: left;
-    font-family: "幼圆";
+    font-family: "黑体";
     font-size: large;
-    font-weight: 900;
+    font-weight: 500;
     //border-left: 5px solid #60a1fb;
     padding-left: 8px;
 }
@@ -50,7 +50,7 @@
 
 /* 表格内左侧内容 */
 #leftItems{
-    width: 200px;
+    width: 220px;
     height: 30px;
     top: 20px;
     left: 40px;
@@ -61,18 +61,21 @@
 #greenButton{
     width: 40px;
     height: 17px;
-    margin: 9px 5px;
+    margin: 9px 0;
+    float: left;
     vertical-align: middle;
-    background: url("../Test/greenButton.jpg") ;
+    background: url("../img/greenButton.jpg") ;
 }
 #buttonText{
     width: 100px;
     height: 30px;
+    float: left;
+    margin: 9px 10px;
     font-family: '幼圆';
     font-weight: 500;
+    //position: relative;
     vertical-align: middle;
 }
-
 
 /* 表格内部右侧内容 */
 #rightItems{
@@ -84,37 +87,38 @@
     vertical-align: middle;
 }
 #yesterday{
-    width: 60px;
+    width: 40px;
     height: 30px;
-    margin: 0 15px;
+    margin: 5px 5px;
+    float: left;
     position: relative;
-    text-align: center;
+    //text-align: center;
 }
 #week{
-    width: 60px;
+    width: 40px;
     height: 30px;
-    margin: 0 15px;
-    //position: relative;
-    text-align: center;
+    margin: 5px 5px 5px 17px;
+    float: left;
+    position: relative;
+    //text-align: center;
 }
 #month{
-    width: 60px;
+    width: 50px;
     height: 30px;
-    margin: 0 15px;
-    //position: relative;
-    text-align: center;
+    margin: 5px 17px 5px 5px;
+    float: left;
+    position: relative;
+    //text-align: center;
 }
 #anyDays{
-    width: 190px;
+    width: 200px;
     height: 30px;
-    margin-right: 30px;
-    float: right;
+    margin: 2px 10px;
+    float: left;
     vertical-align: middle;
     border: 1px solid #C2CAD7;
     border-radius: 5px;
-
-
-    //background: url("../Test/anyDays1.jpg") no-repeat;
+    //background: url("../img/anyDays1.jpg") no-repeat;
     //position: relative;
 }
 #dateSelect{
@@ -122,13 +126,18 @@
     height: 30px;
     font-family: "幼圆";
     font-size: 14px;
-    margin: 5px 10px;
+    float: left;
+    position: relative;
+    margin: 6px 8px;
     vertical-align: middle;
 }
 #anyDays1{
-    width: ;
-    height: ;
-    float: right;
+    width: 15px;
+    height: 15px;
+    margin: 6px 4px;
+    float: left;
+    position: relative;
+    background: url("../img/anyDays1.jpg") no-repeat;
 }
 
 /* 图表 */
