--- a/css/homework.css
+++ b/css/homework.css
@@ -1,3 +1,9 @@
+.onmouseover{
+    font-size: 0.8em;
+    color: #459BF0;
+}
+
+
 #homework{
     width: 1000px;
     height: 546px;
@@ -20,13 +26,13 @@
  }
 #chartName{
     width: 100px;
-    height: 30px;
-    top: 12px;
+    height: 18px;
+    top: 11px;
     left: 40px;
     position: absolute;
     margin: 0 auto;
     float: left;
-    font-family: "黑体";
+    font-family: '黑体';
     font-size: large;
     font-weight: 500;
     //border-left: 5px solid #60a1fb;
@@ -50,70 +56,74 @@
 
 /* 表格内左侧内容 */
 #leftItems{
-    width: 220px;
-    height: 30px;
+    width: 170px;
+    height: 40px;
     top: 20px;
-    left: 40px;
+    left: 35px;
     float: left;
     position: relative;
     vertical-align: middle;
 }
 #greenButton{
-    width: 40px;
-    height: 17px;
-    margin: 9px 0;
+    width: 27px;
+    height: 12px;
+    margin: 12px 0;
     float: left;
     vertical-align: middle;
-    background: url("../img/greenButton.jpg") ;
+    background: url("../img/greenButton.jpg") no-repeat;
 }
 #buttonText{
     width: 100px;
-    height: 30px;
+    height: 20px;
     float: left;
-    margin: 9px 10px;
-    font-family: '幼圆';
-    font-weight: 500;
+    margin: 11px 10px;
+    font-family: '黑体';
+    font-size: 0.8em;
     //position: relative;
     vertical-align: middle;
 }
 
 /* 表格内部右侧内容 */
 #rightItems{
-    width: 435px;
-    height: 30px;
+    width: 350px;
+    height: 40px;
     top: 20px;
     float: right;
+    font-size: 0.8em;
+    margin-right: 37px;
     position: relative;
     vertical-align: middle;
 }
-#yesterday{
+.yesterday{
+    width: 28px;
+    height: 20px;
+    margin: 7px 5px;
+    float: left;
+    position: relative;
+    //text-align: center;
+}
+.week{
+    width: 25px;
+    height: 20px;
+    margin: 7px 5px 5px 15px;
+    float: left;
+    position: relative;
+    //text-align: center;
+}
+.month{
     width: 40px;
-    height: 30px;
-    margin: 5px 5px;
+    height: 20px;
+    margin: 7px 7px 5px 5px;
     float: left;
     position: relative;
     //text-align: center;
 }
-#week{
-    width: 40px;
+
+
+.anyDays{
+    width: 195px;
     height: 30px;
-    margin: 5px 5px 5px 17px;
-    float: left;
-    position: relative;
-    //text-align: center;
-}
-#month{
-    width: 50px;
-    height: 30px;
-    margin: 5px 17px 5px 5px;
-    float: left;
-    position: relative;
-    //text-align: center;
-}
-#anyDays{
-    width: 200px;
-    height: 30px;
-    margin: 2px 10px;
+    margin-left: 15px;
     float: left;
     vertical-align: middle;
     border: 1px solid #C2CAD7;
@@ -121,20 +131,20 @@
     //background: url("../img/anyDays1.jpg") no-repeat;
     //position: relative;
 }
-#dateSelect{
-    width: 160px;
-    height: 30px;
-    font-family: "幼圆";
+.dateSelect{
+    width: 155px;
+    height: 25px;
+    font-family: '黑体';
     font-size: 14px;
     float: left;
     position: relative;
-    margin: 6px 8px;
+    margin: 6px 3px 6px 10px;
     vertical-align: middle;
 }
-#anyDays1{
+.anyDays1{
     width: 15px;
     height: 15px;
-    margin: 6px 4px;
+    margin: 7px 3px;
     float: left;
     position: relative;
     background: url("../img/anyDays1.jpg") no-repeat;
@@ -142,10 +152,11 @@
 
 /* 图表 */
 #myChart{
-    width: 900px;
+    width: 910px;
     height: 350px;
-    top: 50px;
-    left: 12px;
+    top: 30px;
+    left: 1px;
+    position: relative;
     //margin: 0 10px;
     //border: 1px solid #eff3f6;
 
